# Web_hw_14

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16389/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  16390  16391  16395  16396  16398  16399  16402  16404  16406  16407  16410  16416  16420  16424  16426  16427  16430  16432  16434  16440  16444  16446  16453  16454  16455  16467  (+165 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
src/config/: conf.py
src/database/: db.py
src/entity/: create_tables.py  models.py
src/repository/: consumers.py  users.py
src/routes/: auth.py  user_profile.py  users.py
src/schemas/: consumer.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: password_form.html  reset_password_form.html
tests/pytests/: conf_test.py  test_auth.py  test_routes_auth.py  test_routes_users.py  test_users.py
tests/unittests/: test_unit_repository_consumers.py  test_unit_repository_users.py
